# CONQUER

./: README.md  pyproject.toml  requirements.txt
conquer/: __init__.py  compiler.py  executor.py  parser.py  planner.py  schemas.py  validator.py
evaluation/: baseline1_eval_results.xlsx  baseline2_eval_results.xlsx  conquer_eval_results.xlsx  conquer_metric.py  corpus.txt  demo.ipynb
